python/testData/inspections/PyUnresolvedReferencesInspection/underscoredBuiltin.py
<error descr="Unresolved reference '___Classobj'">___Classobj</error>
__debug__
